--- a/111.ipynb
+++ b/111.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fuyang0811/roop-colab-m/blob/main/Copy_of_roop_v1_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fuyang0811/roop-colab-m/blob/main/Copy_of_roop_v1_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +38,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -49,21 +48,42 @@
         {
           "name": "stdout",
           "output_type": "stream",
-          "text": [
-          ]
+          "text": []
         }
       ],
       "source": [
-        "#@title 1.克隆源代码\n",
+        "#@title 1.克隆源代码并安装依赖，并确认重启\n",
         "!git clone https://github.com/s0md3v/roop.git\n",
-        "!git clone https://github.com/dream80/roop_colab.git\n"
+        "!git clone https://github.com/dream80/roop_colab.git\n",
+        "%cd /content/roop\n",
+        "\n",
+        "Version = \"v1.3.2\" #@param [\"v1.3.0\",\"v1.3.1\",\"v1.3.2\"]\n",
+        "\n",
+        "vdict = {\n",
+        "    \"v1.3.0\": \"142284916a5448acdf1a7fdca56d01c5aecafdad\",\n",
+        "    \"v1.3.1\": \"e0642702f388ea16089a1d4a929728fa69457d60\",\n",
+        "    \"v1.3.2\": \"c2d1feb17a9c51061b52cae5897136528f3b80cc\",\n",
+        "}\n",
+        "\n",
+        "commit=vdict.get(Version, \"Invalid Version\")\n",
+        "\n",
+        "vcmd= f\"checkout {commit}\"\n",
+        "\n",
+        "\n",
+        "!git $vcmd\n",
+        "#有红色警告不用担心！\n",
+        "\n",
+        "\n",
+        "!pip install -r requirements.txt\n",
+        "\n",
+        "\n",
+        "#!pip install onnxruntime-gpu==1.15.0"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -81,7 +101,9 @@
         }
       ],
       "source": [
-        "#@title 2.进入项目\n",
+        "#@title 2.连接谷歌driver\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
         "%cd /content/roop\n",
         "\n",
         "Version = \"v1.3.2\" #@param [\"v1.3.0\",\"v1.3.1\",\"v1.3.2\"]\n",
@@ -97,52 +119,7 @@
         "vcmd= f\"checkout {commit}\"\n",
         "\n",
         "\n",
-        "!git $vcmd"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f6urrvLGKqcU",
-        "outputId": "3c76240b-9948-4108-a655-97534d2fd989"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-           
-          ]
-        }
-      ],
-      "source": [
-        "#@title 3.安装依赖\n",
-        "#有红色警告不用担心！\n",
-        "\n",
-        "\n",
-        "!pip install -r requirements.txt\n",
-        "\n",
-        "\n",
-        "#!pip install onnxruntime-gpu==1.15.0"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {
-        "id": "JXUkjpNpz2pc"
-      },
-      "outputs": [],
-      "source": [
-        "#@title 4.准备素材\n",
-        "source = \"/content/drive/MyDrive/1.jpg\" #@param {type:\"string\"}\n",
-        "target_directory = \"/content/drive/MyDrive/wait\" #@param {type:\"string\"}\n",
-        "output_directory = \"/content/drive/MyDrive/out\" #@param {type:\"string\"}"
+        "!git $vcmd\n"
       ]
     },
     {
@@ -160,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -172,11 +149,14 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": [
-          ]
+          "text": []
         }
       ],
       "source": [
+        "#@title 4.准备素材\n",
+        "source = \"/content/drive/MyDrive/1.jpg\" #@param {type:\"string\"}\n",
+        "target_directory = \"/content/drive/MyDrive/wait\" #@param {type:\"string\"}\n",
+        "output_directory = \"/content/drive/MyDrive/out\" #@param {type:\"string\"}\n",
         "#@title 5.开始换脸\n",
         "import os\n",
         "\n",
@@ -362,4 +342,3 @@
   "nbformat": 4,
   "nbformat_minor": 0
 }
-
